// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Bar component Component with all props matches snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "bottom": 0,
        "height": 55.47,
        "justifyContent": "center",
        "left": 0,
        "marginBottom": 0,
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 0,
        "position": "absolute",
        "right": 0,
      },
    ]
  }
  testID="sommelier-navbar"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-around",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="sommelier-nav-item"
    >
      <View
        style={
          Array [
            Object {
              "height": 20,
              "marginBottom": 6,
              "width": 20,
            },
          ]
        }
      >
        icon.jpg
      </View>
      <Text
        bold={false}
        color="primaryGray"
        italic={false}
        size="sm"
        style={
          Array [
            Object {
              "color": "#666666",
              "fontSize": 10,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
            },
          ]
        }
        testID="sommelier-typography"
      >
        abc
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="sommelier-nav-item"
    >
      <View
        style={
          Array [
            Object {
              "height": 20,
              "marginBottom": 6,
              "width": 20,
            },
          ]
        }
      >
        icon.jpg
      </View>
      <Text
        bold={false}
        color="primaryGray"
        italic={false}
        size="sm"
        style={
          Array [
            Object {
              "color": "#666666",
              "fontSize": 10,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "textDecorationColor": "black",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
            },
          ]
        }
        testID="sommelier-typography"
      >
        123
      </Text>
    </View>
  </View>
</View>
`;

exports[`Navigation Bar component Component with only necessary props matches snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "bottom": 0,
        "height": 55.47,
        "justifyContent": "center",
        "left": 0,
        "marginBottom": 0,
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 0,
        "position": "absolute",
        "right": 0,
      },
    ]
  }
  testID="sommelier-navbar"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-around",
        },
      ]
    }
  >
    abc
  </View>
</View>
`;
